fix the horizontal scroll on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -415,13 +415,13 @@ footer p {
   box-sizing: border-box;
 }
 
-.project-one {
+.project {
   position: relative;
   opacity: 1;
   transition: 0.3s;
 }
 
-.project-one img {
+.project img {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.45);
 }
 
