--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -9,20 +9,28 @@
     height: auto;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    max-width: 100%;
     justify-content: center;
+    padding: 0;
+    margin: 0;
   }
 
   .header-left {
     margin-top: 2em;
-    flex: 1 1 33%;
-    margin-left: 0em;
+    margin-left: 0.2em;
+    box-sizing: border-box;
+    padding: 0;
   }
 
   .header-right {
-    margin-top: 2em;
-    flex: 1;
-    margin-left: 0em;
+    margin-top: 1.4em;
+    margin-left: 1.5em;
+    align-self: center;
+    box-sizing: border-box;
+  }
+
+  .header-right img {
+    max-width: 350px;
   }
 
   .header-left h2 {
@@ -31,8 +39,12 @@
 
   .header-left h1 {
     margin-left: 0;
-    font-size: 33px;
+    font-size: 30px;
     margin-bottom: 0;
+  }
+
+  .buttons span {
+    font-size: 12px;
   }
 
   .header-left span {
@@ -63,6 +75,8 @@
   .content {
     margin: 0;
     flex: 1;
+    max-width: 100%;
+    overflow: hidden;
   }
 
   .about-me {
@@ -73,6 +87,8 @@
     gap: 2em;
     justify-content: center;
     text-align: center;
+    max-width: 100%;
+    padding-bottom: 10px;
   }
   .about-left img {
     max-width: 350px;
@@ -110,13 +126,13 @@
   .about-left {
     padding: 0;
     text-align: center;
-    margin-left: 0;
+    margin: 0;
   }
 
   .about-right {
     padding: 0;
     margin: 0;
-    max-width: 350px;
+    max-width: 100%;
     text-align: center;
     align-self: center;
   }
@@ -162,6 +178,14 @@
     margin-bottom: 0;
   }
 
+  .my-projects {
+    padding-top: 40px;
+  }
+
+  .my-projects img {
+    max-width: 340px;
+  }
+
   .projects-container {
     max-width: 100%;
     margin: 0;
@@ -172,7 +196,10 @@
     justify-content: center;
     gap: 1em;
     box-sizing: border-box;
+    padding-top: 20px;
+    padding-bottom: 0;
   }
+
   .project-one {
     margin-top: 1em;
   }
