--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -135,7 +135,7 @@
 
   /* Full-width containers */
   .timeline-container {
-    width: 70%;
+    width: 75%;
     padding-left: 70px;
     padding-right: 25px;
   }
